# tryrust

./: .gitignore  Cargo.toml  main.rs
src/: main.rs
src/component/: com_global_input.rs  mod.rs
src/plugin/: mod.rs  plg_assets.rs
src/resource/: mod.rs  reso_timer.rs
src/system/: mod.rs  sys_exe_input.rs  sys_init_load_asset.rs  sys_spr_move.rs
