[package]
name = "tryrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
serde = "1.0.148"
bevy = { version = "0.9.0" }

[[bin]]
name = "tryrust"
path = "src/main.rs"

